--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRAZY FACTORY</title>
     <link rel="stylesheet" href="./style.css">
+    <!-- <link rel="stylesheet" media="screen and (max-width:1023px)" href="./smart.css"> -->
 </head>
 <body>
     <header>
@@ -16,147 +17,211 @@
     </header>
     <main>
         <div class="header-empty"></div>
-        <div class="itemlist-box">
-            <div class="itemlist">
-                <div class="item">
-                    <img src="./img/CRAZY FACTORY S-S T-shirt (black).png" alt="" class="itemlist-img">
-                    <div class="item-text">
-                        <div class="item-title">
+        <section>
+            <div class="itemlist-box">
+                <div class="itemlist">
+                    <ul>
+                        <li>
+                            <img src="./img/CRAZY FACTORY S-S T-shirt (black).png" alt="" width="100%">
                             CRAZY FACTORY LOGO TEE / black
-                        </div>
-                        <div class="item-price">
-                            ¥5,500
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="./img/CRAZY FACTORY S-S T-shirt (white).png" alt="" class="itemlist-img">
-                    <div class="item-text">
-                        <div class="item-title">
+                            <br>
+                                ¥5,500
+                        </li>
+                        <li>
+                            <img src="./img/CRAZY FACTORY S-S T-shirt (white).png" alt="" width="100%">
                             CRAZY FACTORY LOGO TEE / white
-                        </div>
-                        <div class="item-price">
-                            ¥5,500
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="./img/Eyes S-S T-shirt (white).png" alt="" class="itemlist-img">
-                    <div class="item-text">
-                        <div class="item-title">
-                            EYES LOGO TEE / white
-                        </div>
-                        <div class="item-price">
-                            ¥5,500
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="./img/CRAZY FACTORY PULLOVER HOODIE (black).png" alt="" class="itemlist-img">
-                    <div class="item-text">
-                        <div class="item-title">
-                            CRAZY FACTORY LOGO HOODIE / black
-                        </div>
-                        <div class="item-price">
-                            ¥11,000
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="itemlist">
-                <div class="item">
-                    <img src="./img/Craziest S-S T-shirt (black).png" alt="" class="itemlist-img">
-                    <div class="item-text">
-                        <div class="item-title">
+                            <br>
+                                ¥5,500
+                        </li>
+                        <li>
+                            <img src="./img/Craziest S-S T-shirt (black).png" alt="" width="100%">
                             Craziest LOGO TEE / black
-                        </div>
-                        <div class="item-price">
-                            ¥5,500
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="./img/Craziest S-S T-shirt (white).png" alt="" class="itemlist-img">
-                    <div class="item-text">
-                        <div class="item-title">
+                            <br>
+                                ¥5,500
+                        </li>
+                        <li>
+                            <img src="./img/Craziest S-S T-shirt (white).png" alt="" width="100%">
                             Craziest LOGO TEE / white
-                        </div>
-                        <div class="item-price">
-                            ¥5,500
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="./img/logo black.png" alt="" class="itemlist-img">
-                    <div class="item-text">
-                        <div class="item-title">
-                            LOGO sticker / black
-                        </div>
-                        <div class="item-price">
-                            ¥550
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="./img/logo white.png" alt="" class="itemlist-img">
-                    <div class="item-text">
-                        <div class="item-title">
-                            LOGO sticker / white
-                        </div>
-                        <div class="item-price">
-                            ¥550
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="itemlist">
-                <div class="item">
-                    <img src="./img/CRAZY FACTORY CAP (black).png" alt="" class="itemlist-img">
-                    <div class="item-text">
-                        <div class="item-title">
-                            CRAZY FACTORY LOGO CAP / black
-                        </div>
-                        <div class="item-price">
-                            ¥5,300
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="./img/CRAZY FACTORY bucket hat.png" alt="" class="itemlist-img">
-                    <div class="item-text">
-                        <div class="item-title">
-                            CRAZY FACTORY LOGO BUCKET HAT / black
-                        </div>
-                        <div class="item-price">
-                            4,250
-                        </div>
-                    </div>
-                    
-                </div>
-                <div class="item">
-                    <img src="./img/CRAZY FACTORY MESH CAP (black).png" alt="" class="itemlist-img">
-                    <div class="item-text">
-                        <div class="item-title">
-                            CRAZY FACTORY LOGO MESH CAP / black
-                        </div>
-                        <div class="item-price">
-                            ¥2,500
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="./img/CRAZY FACTORY トートバッグ (black).png" alt="" class="itemlist-img">
-                    <div class="item-text">
-                        <div class="item-title">
+                            <br>
+                                ¥5,500
+                        </li>
+                        <li>
+                            <img src="./img/Never LOGO TEE black.png" alt="" width="100%">
+                            Never LOGO TEE / black
+                            <br>
+                                ¥5,500
+                        </li>
+                        <li>
+                            <img src="./img/Never LOGO JACKET black å¾.png" alt="" width="100%">
+                            Never LOGO JACKET / black
+                            <br>
+                                ¥19,800
+                        </li>
+                        <li>
+                            <img src="./img/CRAZY FACTORY PULLOVER HOODIE (black).png" alt="" width="100%">
+                            CRAZY FACTORY LOGO HOODIE / black
+                            <br>
+                                ¥11,000
+                        </li>
+                        <li>
+                            <img src="./img/CRAZY FACTORY トートバッグ (black).png" alt="" width="100%">
                             CRAZY FACTORY LOGO TOTE BAG / black
+                            <br>
+                                ¥3,250
+                        </li>
+                        <li>
+                            <img src="./img/CRAZY FACTORY MESH CAP (black).png" alt="" width="100%">
+                            CRAZY FACTORY LOGO MESH CAP / black
+                            <br>
+                                ¥2,500
+                        </li>
+                        <li>
+                            <img src="./img/CRAZY FACTORY bucket hat.png" alt="" width="100%">
+                            CRAZY FACTORY LOGO BUCKET HAT / black
+                            <br>
+                                ¥4,250
+                        </li>
+                        <li>
+                            <img src="./img/logo black.png" alt="" width="100%">
+                            LOGO sticker / black
+                            <br>
+                                ¥550
+                        </li>
+                        <li>
+                            <img src="./img/logo white.png" alt="" width="100%">
+                            LOGO sticker / white
+                            <br>
+                                ¥550
+                        </li>
+                    </ul>
+                    <!-- <div class="item">
+                        <img src="./img/CRAZY FACTORY S-S T-shirt (black).png" alt="" class="itemlist-img">
+                        <div class="item-text">
+                            <div class="item-title">
+                                CRAZY FACTORY LOGO TEE / black
+                                <br>
+                                ¥5,500
+                            </div>
                         </div>
-                        <div class="item-price">
-                            ¥3,250
+                    </div>
+                    <div class="item">
+                        <img src="./img/CRAZY FACTORY S-S T-shirt (white).png" alt="" class="itemlist-img">
+                        <div class="item-text">
+                            <div class="item-title">
+                                CRAZY FACTORY LOGO TEE / white
+                                <br>
+                                ¥5,500
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/Eyes S-S T-shirt (white).png" alt="" class="itemlist-img">
+                        <div class="item-text">
+                            <div class="item-title">
+                                EYES LOGO TEE / white
+                                <br>
+                                ¥5,500
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/CRAZY FACTORY PULLOVER HOODIE (black).png" alt="" class="itemlist-img">
+                        <div class="item-text">
+                            <div class="item-title">
+                                CRAZY FACTORY LOGO HOODIE / black
+                                <br>
+                                ¥11,000
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="itemlist">
+                    <div class="item">
+                        <img src="./img/Craziest S-S T-shirt (black).png" alt="" class="itemlist-img">
+                        <div class="item-text">
+                            <div class="item-title">
+                                Craziest LOGO TEE / black
+                                <br>
+                                ¥5,500
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/Craziest S-S T-shirt (white).png" alt="" class="itemlist-img">
+                        <div class="item-text">
+                            <div class="item-title">
+                                Craziest LOGO TEE / white
+                                <br>
+                                ¥5,500
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/logo black.png" alt="" class="itemlist-img">
+                        <div class="item-text">
+                            <div class="item-title">
+                                LOGO sticker / black
+                                <br>
+                                ¥550
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/logo white.png" alt="" class="itemlist-img">
+                        <div class="item-text">
+                            <div class="item-title">
+                                LOGO sticker / white
+                                <br>
+                                ¥550
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="itemlist">
+                    <div class="item">
+                        <img src="./img/CRAZY FACTORY CAP (black).png" alt="" class="itemlist-img">
+                        <div class="item-text">
+                            <div class="item-title">
+                                CRAZY FACTORY LOGO CAP / black
+                                <br>
+                                ¥5,300
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/CRAZY FACTORY bucket hat.png" alt="" class="itemlist-img">
+                        <div class="item-text">
+                            <div class="item-title">
+                                CRAZY FACTORY LOGO BUCKET HAT / black
+                                <br>
+                                4,250
+                            </div>
+                        </div>
+                        
+                    </div>
+                    <div class="item">
+                        <img src="./img/CRAZY FACTORY MESH CAP (black).png" alt="" class="itemlist-img">
+                        <div class="item-text">
+                            <div class="item-title">
+                                CRAZY FACTORY LOGO MESH CAP / black
+                                <br>
+                                ¥2,500
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="./img/CRAZY FACTORY トートバッグ (black).png" alt="" class="itemlist-img">
+                        <div class="item-text">
+                            <div class="item-title">
+                                CRAZY FACTORY LOGO TOTE BAG / black
+                                <br>
+                                ¥3,250
+                            </div>
+                        </div>
+                    </div> -->
+                </div>
             </div>
-        </div>
+        </section>
     </main>
 </body>
 </html>
