--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 ¥5,500
                         </li>
                         <li>
-                            <img src="./img/Never LOGO JACKET black å¾.png" alt="" width="100%">
+                            <img src="./img/Never LOGO JACKET black.png" alt="" width="100%">
                             Never LOGO JACKET / black
                             <br>
                                 ¥19,800
