--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                                 ¥5,500
                         </li>
                         <li>
-                            <img src="./img/Never LOGO TEE black.png" alt="" width="100%">
+                            <a href="https://kohakunara.github.io/crazy-factory.official-never-tee/">
+                                <img src="./img/Never LOGO TEE black.png" alt="" width="100%">
+                            </a>
                             Never LOGO TEE / black
                             <br>
                                 ¥5,500
