--- a/index.html
+++ b/index.html
@@ -22,25 +22,33 @@
                 <div class="itemlist">
                     <ul>
                         <li>
-                            <img src="./img/CRAZY FACTORY S-S T-shirt (black).png" alt="" width="100%">
+                            <a href="https://kohakunara.github.io/crazy-factory.official-logo-tee-black/">
+                                <img src="./img/CRAZY FACTORY S-S T-shirt (black).png" alt="" width="100%">
+                            </a>
                             CRAZY FACTORY LOGO TEE / black
                             <br>
                                 ¥5,500
                         </li>
                         <li>
-                            <img src="./img/CRAZY FACTORY S-S T-shirt (white).png" alt="" width="100%">
+                            <a href="https://kohakunara.github.io/crazy-factory.official-logo-tee-white/">
+                                <img src="./img/CRAZY FACTORY S-S T-shirt (white).png" alt="" width="100%">
+                            </a>
                             CRAZY FACTORY LOGO TEE / white
                             <br>
                                 ¥5,500
                         </li>
                         <li>
-                            <img src="./img/Craziest S-S T-shirt (black).png" alt="" width="100%">
+                            <a href="https://kohakunara.github.io/crazy-factory.official-craziest-tee-black/">
+                                <img src="./img/Craziest S-S T-shirt (black).png" alt="" width="100%">
+                            </a>
                             Craziest LOGO TEE / black
                             <br>
                                 ¥5,500
                         </li>
                         <li>
-                            <img src="./img/Craziest S-S T-shirt (white).png" alt="" width="100%">
+                            <a href="https://kohakunara.github.io/crazy-factory.official-craziest-tee-white/">
+                                <img src="./img/Craziest S-S T-shirt (white).png" alt="" width="100%">
+                            </a>
                             Craziest LOGO TEE / white
                             <br>
                                 ¥5,500
@@ -96,134 +104,21 @@
                                 ¥550
                         </li>
                     </ul>
-                    <!-- <div class="item">
-                        <img src="./img/CRAZY FACTORY S-S T-shirt (black).png" alt="" class="itemlist-img">
-                        <div class="item-text">
-                            <div class="item-title">
-                                CRAZY FACTORY LOGO TEE / black
-                                <br>
-                                ¥5,500
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/CRAZY FACTORY S-S T-shirt (white).png" alt="" class="itemlist-img">
-                        <div class="item-text">
-                            <div class="item-title">
-                                CRAZY FACTORY LOGO TEE / white
-                                <br>
-                                ¥5,500
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/Eyes S-S T-shirt (white).png" alt="" class="itemlist-img">
-                        <div class="item-text">
-                            <div class="item-title">
-                                EYES LOGO TEE / white
-                                <br>
-                                ¥5,500
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/CRAZY FACTORY PULLOVER HOODIE (black).png" alt="" class="itemlist-img">
-                        <div class="item-text">
-                            <div class="item-title">
-                                CRAZY FACTORY LOGO HOODIE / black
-                                <br>
-                                ¥11,000
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="itemlist">
-                    <div class="item">
-                        <img src="./img/Craziest S-S T-shirt (black).png" alt="" class="itemlist-img">
-                        <div class="item-text">
-                            <div class="item-title">
-                                Craziest LOGO TEE / black
-                                <br>
-                                ¥5,500
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/Craziest S-S T-shirt (white).png" alt="" class="itemlist-img">
-                        <div class="item-text">
-                            <div class="item-title">
-                                Craziest LOGO TEE / white
-                                <br>
-                                ¥5,500
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/logo black.png" alt="" class="itemlist-img">
-                        <div class="item-text">
-                            <div class="item-title">
-                                LOGO sticker / black
-                                <br>
-                                ¥550
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/logo white.png" alt="" class="itemlist-img">
-                        <div class="item-text">
-                            <div class="item-title">
-                                LOGO sticker / white
-                                <br>
-                                ¥550
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="itemlist">
-                    <div class="item">
-                        <img src="./img/CRAZY FACTORY CAP (black).png" alt="" class="itemlist-img">
-                        <div class="item-text">
-                            <div class="item-title">
-                                CRAZY FACTORY LOGO CAP / black
-                                <br>
-                                ¥5,300
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/CRAZY FACTORY bucket hat.png" alt="" class="itemlist-img">
-                        <div class="item-text">
-                            <div class="item-title">
-                                CRAZY FACTORY LOGO BUCKET HAT / black
-                                <br>
-                                4,250
-                            </div>
-                        </div>
-                        
-                    </div>
-                    <div class="item">
-                        <img src="./img/CRAZY FACTORY MESH CAP (black).png" alt="" class="itemlist-img">
-                        <div class="item-text">
-                            <div class="item-title">
-                                CRAZY FACTORY LOGO MESH CAP / black
-                                <br>
-                                ¥2,500
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="./img/CRAZY FACTORY トートバッグ (black).png" alt="" class="itemlist-img">
-                        <div class="item-text">
-                            <div class="item-title">
-                                CRAZY FACTORY LOGO TOTE BAG / black
-                                <br>
-                                ¥3,250
-                            </div>
-                        </div>
-                    </div> -->
                 </div>
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer-box">
+            <div class="footer-inbox">
+                <div class="footer-img">
+                    <a href="https://kohakunara.github.io/crazy-factory.official/">
+                        <img src="./img/B1CDC920-3106-4B78-8E28-A6950952DB94.jpeg" alt="" width="100%">
+                    </a>
+                </div>
+            </div>
+            <p class="copy-light">©️ 2024 CRAZY FACTORY - Nara Kohaku</p>
+        </div>
+    </footer>
 </body>
 </html>
